--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://RaNaWaleeD-hub.github.io/internship-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^2.5.0",
@@ -14,10 +16,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
+    "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "slick": "^1.12.2",
-    "react-scripts": "5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typewriter": "^8.0.3",
@@ -27,6 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
